--- a/lib/hello_web/templates/layout/root.html.heex
+++ b/lib/hello_web/templates/layout/root.html.heex
@@ -14,7 +14,8 @@
       <section class="container">
         <nav>
           <ul>
-            <li><a href="https://fgcz-shiny.uzh.ch/masa_demo/">Demo Shiny App</a></li>
+            <li><a href="https://fgcz-shiny.uzh.ch/masa_demo1/">Demo Shiny App1</a></li>
+            <li><a href="https://fgcz-shiny.uzh.ch/masa_demo2/">Demo Shiny App2</a></li>
             <%= if function_exported?(Routes, :live_dashboard_path, 2) do %>
               <li><%= link "LiveDashboard", to: Routes.live_dashboard_path(@conn, :home) %></li>
             <% end %>
