Added search view, controller, template

--- a/lib/hello_web/templates/page/index.html.heex
+++ b/lib/hello_web/templates/page/index.html.heex
@@ -8,7 +8,7 @@
     <h2>Curration &amp; Import</h2>
     <ul>
       <li>
-        <a href="">Search &amp; crawl curration candidates</a>
+        <a href="/search">Search &amp; crawl curration candidates</a>
       </li>
       <li>
         <a href="">Import &amp; preprocess job submission</a>
