--- a/lib/hello_web/templates/layout/root.html.heex
+++ b/lib/hello_web/templates/layout/root.html.heex
@@ -21,7 +21,7 @@
             <% end %>
           </ul>
         </nav>
-        <a href="https://phoenixframework.org/" class="phx-logo">
+        <a href="http://fgcz-c-047:4000/" class="phx-logo">
           <img src={Routes.static_path(@conn, "/images/phoenix.png")} alt="Phoenix Framework Logo"/>
         </a>
       </section>
